Atualizando index.html e adicionando image.jpeg

--- a/fase1/index.html
+++ b/fase1/index.html
@@ -8,7 +8,7 @@
 
 <h1>Keyla da Silva Andrade</h1>
 
-<img src="imagem.jpeg" alt="Foto de Perfil" width="250" height="300">
+<img src="image.jpeg" alt="Foto de Perfil" width="250" height="300">
 
 <h4>RA: </h4>
 <p> 323132029 </p>
